update pages with new sgds prefixes

--- a/_includes/accessibility-common-guidelines.html
+++ b/_includes/accessibility-common-guidelines.html
@@ -12,8 +12,8 @@
         <li><a data-tab="#tab4">Robust</a></li>
     </ul>
 </div>
-<div class="row" id="tab1">
-    <div class="col">
+<div class="sgds-row" id="tab1">
+    <div class="sgds-col">
         <p>
             Available to the senses (vision and hearing primarily) either
             through the browser or through assistive technologies.
@@ -36,8 +36,8 @@
         </p>
     </div>
 </div>
-<div class="row" id="tab2">
-    <div class="col">
+<div class="sgds-row" id="tab2">
+    <div class="sgds-col">
         <p>
             Users can interact with all controls and interactive elements using
             either the mouse, keyboard, or an assistive device.
@@ -65,8 +65,8 @@
         </p>
     </div>
 </div>
-<div class="row" id="tab3">
-    <div class="col">
+<div class="sgds-row" id="tab3">
+    <div class="sgds-col">
         <p>Content is clear and limits confusion and ambiguity.</p>
         <p>
             <b>Readable:</b> Make text content readable and understandable,
@@ -84,8 +84,8 @@
         </p>
     </div>
 </div>
-<div class="row" id="tab4">
-    <div class="col">
+<div class="sgds-row" id="tab4">
+    <div class="sgds-col">
         <p>A wide range of technologies can access the content.</p>
         <p>
             <b>Compatible:</b> Maximize compatibility with current and future
