--- a/_includes/admin-template/footer.html
+++ b/_includes/admin-template/footer.html
@@ -1,14 +1,14 @@
 <footer class="sgds-footer top-section">
     <div class="sgds-container is-fluid">
-        <div class="row">
-            <div class="col footer-col header">
+        <div class="sgds-row">
+            <div class="sgds-col footer-col header">
                 <h5 class="sub-header has-text-white">
                     <b>Isomer Design System</b>
                 </h5>
             </div>
         </div>
-        <div class="row">
-            <div class="col footer-col is-right-desktop-only">
+        <div class="sgds-row">
+            <div class="sgds-col footer-col is-right-desktop-only">
                 <ul>
                     <li class="is-inline-block-desktop-only">
                         <p><a href="/">Contact</a></p>
@@ -24,13 +24,13 @@
 <footer class="sgds-footer bottom-section">
     <div class="sgds-container is-fluid">
         <div class="footer-bottom row is-vcentered divider">
-            <div class="col footer-col">
+            <div class="sgds-col footer-col">
                 <ul>
                     <li><a href="/">Privacy Statement</a></li>
                     <li><a href="/">Terms of Use</a></li>
                 </ul>
             </div>
-            <div class="col footer-col has-text-right-desktop has-text-left-mobile">
+            <div class="sgds-col footer-col has-text-right-desktop has-text-left-mobile">
                 <p class="is-hidden-touch">
                     © 2018 Government of Singapore. Last Updated 5 June 2018
                 </p>
