--- a/_includes/admin-template/masthead.html
+++ b/_includes/admin-template/masthead.html
@@ -1,7 +1,7 @@
 <div class="sgds-masthead">
     <div class="sgds-container is-fluid">
-        <div class="row">
-            <div class="col has-text-centered-touch">
+        <div class="sgds-row">
+            <div class="sgds-col has-text-centered-touch">
                 <a href="https://www.gov.sg" target="_blank">
                     <span class="sgds-icon sgds-icon-sg-crest"></span>
                     <span class="is-text">A Singapore Government Agency Website</span>
