--- a/_includes/guide-card-section.html
+++ b/_includes/guide-card-section.html
@@ -1,15 +1,15 @@
 <div class="content">
-    <div class="row has-text-centered">
-        <div class="col is-10 is-offset-1">
+    <div class="sgds-row has-text-centered">
+        <div class="sgds-col is-10 is-offset-1">
             <h2>
                 Guides for Different Roles
             </h2>
         </div>
     </div>
-    <div class="row">
-        <div class="col is-10 is-offset-1">
-            <div class="row card-section">
-                <div class="col is-4 is-flex">
+    <div class="sgds-row">
+        <div class="sgds-col is-10 is-offset-1">
+            <div class="sgds-row card-section">
+                <div class="sgds-col is-4 is-flex">
                     <a href="/guides/developers-accessibility/">
                         <div class="sgds-card sgds-card-button">
                             <div class="sgds-card-image">
@@ -28,7 +28,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col is-4 is-flex">
+                <div class="sgds-col is-4 is-flex">
                     <a href="/guides/designers-accessibility/">
                         <div class="sgds-card sgds-card-button">
                             <div class="sgds-card-image">
@@ -47,7 +47,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col is-4 is-flex">
+                <div class="sgds-col is-4 is-flex">
                     <a href="/guides/writers-accessibility/">
                         <div class="sgds-card sgds-card-button">
                             <div class="sgds-card-image">
