--- a/_includes/sgds-agencyhead.html
+++ b/_includes/sgds-agencyhead.html
@@ -83,8 +83,8 @@
                 </div>
             </div>
         </nav>
-        <div class="row is-hidden-touch hide" id="searchbar-main">
-            <div class="col">
+        <div class="sgds-row is-hidden-touch hide" id="searchbar-main">
+            <div class="sgds-col">
                 <hr class="margin--bottom--sm" />
                 <form action="/search/" method="get">
                     {% include sgds-search-box.html %}
