--- a/_includes/sgds-footer.html
+++ b/_includes/sgds-footer.html
@@ -1,15 +1,15 @@
 <footer class="sgds-footer">
   <div class="top-section">
     <div class="sgds-container ">
-      <div class="row">
-        <div class="col header">
+      <div class="sgds-row">
+        <div class="sgds-col header">
           <h5 class="has-text-white">
             <b>{{ site.title }}</b>
           </h5>
         </div>
       </div>
-      <div class="row">
-        <div class="col is-3">
+      <div class="sgds-row">
+        <div class="sgds-col is-3">
           <p class="has-text-white"><b>User Guides</b></p>
           <p>
             <a href="/docs/getting-started/">Get started with Design System</a>
@@ -21,14 +21,14 @@
           </p>
           <p><a href="/coming-soon/">Submit a Theme</a></p>
         </div>
-        <div class="col is-3">
+        <div class="sgds-col is-3">
           <p class="has-text-white"><b>Other Sites</b></p>
           <p><a href="https://www.developer.gov.sg">Developer Portal</a></p>
           <p><a href="https://www.isomer.gov.sg/">Isomer</a></p>
         </div>
       </div>
-      <div class="row">
-        <div class="col is-right-desktop-only">
+      <div class="sgds-row">
+        <div class="sgds-col is-right-desktop-only">
           <ul>
             <li class="is-inline-block-desktop-only">
               <!--Tools questionaire-->
@@ -47,8 +47,8 @@
   </div>
   <div class="bottom-section">
     <div class="sgds-container ">
-      <div class="row is-multiline">
-        <div class="col is-12">
+      <div class="sgds-row is-multiline">
+        <div class="sgds-col is-12">
           <ul>
             <li>
               <a href="{{ site.report_vulnerability }}" target="_blank"
@@ -60,7 +60,7 @@
           </ul>
         </div>
         <div
-          class="col is-12 has-text-right-desktop has-text-right-tablet has-text-left-mobile"
+          class="sgds-col is-12 has-text-right-desktop has-text-right-tablet has-text-left-mobile"
         >
           <p class="is-hidden-touch">
             © {{ site.time | date: "%Y" }} Government of Singapore. Last Updated
