--- a/_layouts/layout-post.html
+++ b/_layouts/layout-post.html
@@ -5,8 +5,8 @@ layout: layout-default
 <section class="sgds-section" style="flex-grow: 1;">
   <div class="sgds-container">
     <div class="content has-default-header-styles">
-      <div class="row">
-        <div class="col is-8 is-offset-2">
+      <div class="sgds-row">
+        <div class="sgds-col is-8 is-offset-2">
           {{content}}
         </div>
       </div>
