--- a/collections/_layout/container.html
+++ b/collections/_layout/container.html
@@ -49,7 +49,7 @@ icon: container
   You can reference the table below of <code>sgds-container</code> 
   class behaviour at different screen sizes.
 </p>
-<table class="table is-bordered is-size-8">
+<table class="sgds-table is-bordered is-size-8">
   <thead>
     <tr>
       <td>Screensize</td>
