--- a/collections/_layout/section.html
+++ b/collections/_layout/section.html
@@ -31,7 +31,7 @@ icon: section
 <hr/>
 
 <h3>Style</h3>
-<table class="table">
+<table class="sgds-table">
     <thead>
         <tr>
             <th>Modifier</th>
