--- a/contents/templates/admin-template/calender.html
+++ b/contents/templates/admin-template/calender.html
@@ -4,30 +4,30 @@ permalink: /admin-template/calender/
 layout: admin-template/layouts-single-side-nav
 ---
 <div class="sgds-container is-fluid">
-    <div class="row">
-        <div class="col">
+    <div class="sgds-row">
+        <div class="sgds-col">
             <div class="sgds-box">
-                <div class="row">
-                    <div class="col is-3">
-                        <label for="" class="label">Start Date</label>
-                        <div class="field has-addons">
-                            <div class="control">
-                                <input id="datepickerDemoTrigger" class="input" type="date" value="29/09/2018">
+                <div class="sgds-row">
+                    <div class="sgds-col is-3">
+                        <label for="" class="sgds-label">Start Date</label>
+                        <div class="sgds-field has-addons">
+                            <div class="sgds-control">
+                                <input id="datepickerDemoTrigger" class="sgds-input" type="date" value="29/09/2018">
                             </div>
-                            <div class="control">
+                            <div class="sgds-control">
                                 <a id="datepicker-trigger" class="sgds-button">
                                     <i class="sgds-icon sgds-icon-calendar"></i>
                                 </a>
                             </div>
                         </div>
                     </div>
-                    <div class="col is-3">
-                        <label for="" class="label">End Date</label>
-                        <div class="field has-addons">
-                            <div class="control">
-                                <input id="datepickerDemoTrigger" class="input" type="date" value="29/09/2018">
+                    <div class="sgds-col is-3">
+                        <label for="" class="sgds-label">End Date</label>
+                        <div class="sgds-field has-addons">
+                            <div class="sgds-control">
+                                <input id="datepickerDemoTrigger" class="sgds-input" type="date" value="29/09/2018">
                             </div>
-                            <div class="control">
+                            <div class="sgds-control">
                                 <a id="datepicker-trigger" class="sgds-button">
                                     <i class="sgds-icon sgds-icon-calendar"></i>
                                 </a>
@@ -35,9 +35,9 @@ layout: admin-template/layouts-single-side-nav
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col is-3">
-                        <label for="" class="label">Modules</label>
+                <div class="sgds-row">
+                    <div class="sgds-col is-3">
+                        <label for="" class="sgds-label">Modules</label>
                         <div class="sgds-dropdown">
                             <div class="sgds-dropdown-trigger">
                                 <button class="sgds-button is-fullwidth" aria-haspopup="true" aria-controls="sgds-dropdown-menu">
@@ -56,13 +56,13 @@ layout: admin-template/layouts-single-side-nav
                             </div>
                         </div>
                     </div>
-                    <div class="col is-4">
-                        <label for="" class="label">User</label>
-                        <input class="input" type="text" placeholder="Text input">
+                    <div class="sgds-col is-4">
+                        <label for="" class="sgds-label">User</label>
+                        <input class="sgds-input" type="text" placeholder="Text input">
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col is-4">
+                <div class="sgds-row">
+                    <div class="sgds-col is-4">
                         <a href="" class="sgds-button is-success is-medium">Search</a>
                     </div>
                 </div>
