--- a/contents/templates/admin-template/consumer-info.html
+++ b/contents/templates/admin-template/consumer-info.html
@@ -6,8 +6,8 @@ breadcrumb: General
 ---
 
 <div class="sgds-container is-fluid">
-    <div class="row">
-        <div class="col is-4">
+    <div class="sgds-row">
+        <div class="sgds-col is-4">
             <div class="sgds-card">
                 <div class="sgds-card-header">
                     <p class="sgds-card-header-title">
@@ -17,7 +17,7 @@ breadcrumb: General
                 <div class="sgds-card-content">
                     <img src="https://randomuser.me/api/portraits/women/48.jpg" alt="" style="border-radius:400px;">
                     <h4 class="has-text-weight-bold padding--top padding--bottom">Lorem ipsum</h4>
-                    <table class="table is-fullwidth is-striped is-narrow">
+                    <table class="sgds-table is-fullwidth is-striped is-narrow">
                         <tbody>
                             <tr>
                                 <td class="has-text-weight-bold">Birthdate</td>
@@ -36,7 +36,7 @@ breadcrumb: General
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="sgds-col">
             <div class="sgds-card margin--bottom">
                 <div class="sgds-card-header">
                     <p class="sgds-card-header-title">
@@ -61,9 +61,9 @@ breadcrumb: General
                             <li><a data-tab="#tab3">Customer Address</a></li>
                         </ul>
                     </div>
-                    <div class="row" id="tab1">
-                        <div class="col">
-                            <table class="table is-fullwidth is-striped is-hoverable is-fullwidth is-bordered is-narrow">
+                    <div class="sgds-row" id="tab1">
+                        <div class="sgds-col">
+                            <table class="sgds-table is-fullwidth is-striped is-hoverable is-fullwidth is-bordered is-narrow">
                                 <thead class="has-text-weight-bold">
                                     <tr>
                                         <td>Order No.</td>
@@ -111,9 +111,9 @@ breadcrumb: General
                             </table>
                         </div>
                     </div>
-                    <div class="row" id="tab2">
-                        <div class="col">
-                            <table class="table is-fullwidth is-striped is-hoverable is-fullwidth is-bordered is-narrow">
+                    <div class="sgds-row" id="tab2">
+                        <div class="sgds-col">
+                            <table class="sgds-table is-fullwidth is-striped is-hoverable is-fullwidth is-bordered is-narrow">
                                 <thead class="has-text-weight-bold">
                                 <tr>
                                     <td>Product ID</td>
@@ -143,10 +143,10 @@ breadcrumb: General
                             </table>
                         </div>
                     </div>
-                    <div class="row" id="tab3">
-                        <div class="col">
-                            <div class="row">
-                                <div class="col">
+                    <div class="sgds-row" id="tab3">
+                        <div class="sgds-col">
+                            <div class="sgds-row">
+                                <div class="sgds-col">
                                     <div class="sgds-card">
                                         <div class="sgds-card-header">
                                             <p class="sgds-card-header-title">
@@ -169,7 +169,7 @@ breadcrumb: General
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col">
+                                <div class="sgds-col">
                                     <div class="sgds-card">
                                         <div class="sgds-card-header">
                                             <p class="sgds-card-header-title">
