--- a/contents/templates/admin-template/faqs.html
+++ b/contents/templates/admin-template/faqs.html
@@ -6,8 +6,8 @@ breadcrump: FAQs
 ---
 {% include admin-template/base.html %}
 <div class="sgds-container is-fluid">
-    <div class="row">
-        <div class="col is-4">
+    <div class="sgds-row">
+        <div class="sgds-col is-4">
             <div class="sgds-accordion-container">
                 <div class="sgds-accordion">
                     <a class="sgds-accordion-header">
