--- a/contents/templates/admin-template/forms.html
+++ b/contents/templates/admin-template/forms.html
@@ -4,16 +4,16 @@ title: Form & Checkbox
 layout: admin-template/layouts-single-side-nav
 ---
 <div class="sgds-container is-fluid">
-    <div class="row">
-        <div class="col">
-            <div class="field is-horizontal">
-                <div class="field-label">
-                    <label class="label">Checkbox</label>
+    <div class="sgds-row">
+        <div class="sgds-col">
+            <div class="sgds-field is-horizontal">
+                <div class="sgds-field-label">
+                    <label class="sgds-label">Checkbox</label>
                 </div>
-                <div class="field-body">
-                    <div class="field">
-                        <div class="control">
-                            <label class="checkbox">
+                <div class="sgds-field-body">
+                    <div class="sgds-field">
+                        <div class="sgds-control">
+                            <label class="sgds-checkbox">
                                 <input type="checkbox">
                                 Checkbox
                             </label>
@@ -22,53 +22,53 @@ layout: admin-template/layouts-single-side-nav
                 </div>
             </div>
 
-            <div class="field is-horizontal">
-                <div class="field-label is-small">
-                    <label class="label">Small padding</label>
+            <div class="sgds-field is-horizontal">
+                <div class="sgds-field-label is-small">
+                    <label class="sgds-label">Small padding</label>
                 </div>
-                <div class="field-body">
-                    <div class="field">
-                        <div class="control">
-                            <input class="input is-small" type="text" placeholder="Small sized input">
+                <div class="sgds-field-body">
+                    <div class="sgds-field">
+                        <div class="sgds-control">
+                            <input class="sgds-input is-small" type="text" placeholder="Small sized input">
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="field is-horizontal">
-                <div class="field-label is-normal">
-                    <label class="label">Normal label</label>
+            <div class="sgds-field is-horizontal">
+                <div class="sgds-field-label is-normal">
+                    <label class="sgds-label">Normal label</label>
                 </div>
-                <div class="field-body">
-                    <div class="field">
-                        <div class="control">
-                            <input class="input" type="text" placeholder="Normal sized input">
+                <div class="sgds-field-body">
+                    <div class="sgds-field">
+                        <div class="sgds-control">
+                            <input class="sgds-input" type="text" placeholder="Normal sized input">
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="field is-horizontal">
-                <div class="field-label is-medium">
-                    <label class="label">Medium label</label>
+            <div class="sgds-field is-horizontal">
+                <div class="sgds-field-label is-medium">
+                    <label class="sgds-label">Medium label</label>
                 </div>
-                <div class="field-body">
-                    <div class="field">
-                        <div class="control">
-                            <input class="input is-medium" type="text" placeholder="Medium sized input">
+                <div class="sgds-field-body">
+                    <div class="sgds-field">
+                        <div class="sgds-control">
+                            <input class="sgds-input is-medium" type="text" placeholder="Medium sized input">
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="field is-horizontal">
-                <div class="field-label is-large">
-                    <label class="label">Large label</label>
+            <div class="sgds-field is-horizontal">
+                <div class="sgds-field-label is-large">
+                    <label class="sgds-label">Large label</label>
                 </div>
-                <div class="field-body">
-                    <div class="field">
-                        <div class="control">
-                            <input class="input is-large" type="text" placeholder="Large sized input">
+                <div class="sgds-field-body">
+                    <div class="sgds-field">
+                        <div class="sgds-control">
+                            <input class="sgds-input is-large" type="text" placeholder="Large sized input">
                         </div>
                     </div>
                 </div>
