--- a/contents/templates/admin-template/health-status.html
+++ b/contents/templates/admin-template/health-status.html
@@ -5,8 +5,8 @@ layout: admin-template/layouts-single-side-nav
 ---
 
 <div class="sgds-container is-fluid has-background-white padding--lg">
-    <div class="row">
-        <div class="col">
+    <div class="sgds-row">
+        <div class="sgds-col">
             <!--<div class="sgds-tabs" data-sgds="tabs">-->
             <!--<ul>-->
             <!--<li class="is-active">-->
@@ -36,8 +36,8 @@ layout: admin-template/layouts-single-side-nav
     </div>
 
 
-    <div class="row" id="tab1">
-        <div class="col">
+    <div class="sgds-row" id="tab1">
+        <div class="sgds-col">
             <div class="sgds-card">
                 <div class="sgds-card-header">
                     <p class="sgds-card-header-title is-block">
@@ -54,64 +54,64 @@ layout: admin-template/layouts-single-side-nav
                     </a>
                 </div>
                 <div class="sgds-card-content">
-                    <div class="row is-multiline">
-                        <div class="col is-12 padding--bottom--none">
+                    <div class="sgds-row is-multiline">
+                        <div class="sgds-col is-12 padding--bottom--none">
                             <h5 class="has-text-weight-bold is-uppercase">OPENAM</h5>
                         </div>
-                        <div class="col is-6">
+                        <div class="sgds-col is-6">
                             <div class="sgds-box">
-                                <div class="row is-vcentered">
-                                    <div class="col">
+                                <div class="sgds-row is-vcentered">
+                                    <div class="sgds-col">
                                         <img src="/assets/img/openam.png" alt="">
                                     </div>
-                                    <div class="col is-8">
+                                    <div class="sgds-col is-8">
                                         <span class="sgds-tag is-info is-rounded">
                                         intranet
                                         </span><br>
                                         https://sso.apex.dev:443/openam
                                     </div>
-                                    <div class="col">
+                                    <div class="sgds-col">
                                         <div class="sgds-button is-outlined is-success is-rounded">Healthy</div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="row is-multiline">
-                        <div class="col is-12 padding--bottom--none">
+                    <div class="sgds-row is-multiline">
+                        <div class="sgds-col is-12 padding--bottom--none">
                             <h5 class="has-text-weight-bold is-uppercase">Ansible Tower</h5>
                         </div>
-                        <div class="col is-6">
+                        <div class="sgds-col is-6">
                             <div class="sgds-box has-border-danger">
-                                <div class="row is-vcentered">
-                                    <div class="col">
+                                <div class="sgds-row is-vcentered">
+                                    <div class="sgds-col">
                                         <img src="/assets/img/ansible-tower.png" alt="">
                                     </div>
-                                    <div class="col is-8">
+                                    <div class="sgds-col is-8">
                                         <span class="sgds-tag is-warning is-rounded">
                                         internet
                                         </span><br>
                                         https://sso.apex.dev:443/openam
                                     </div>
-                                    <div class="col">
+                                    <div class="sgds-col">
                                         <div class="sgds-button is-outlined is-success is-rounded">Healthy</div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col is-6">
+                        <div class="sgds-col is-6">
                             <div class="sgds-box">
-                                <div class="row is-vcentered">
-                                    <div class="col">
+                                <div class="sgds-row is-vcentered">
+                                    <div class="sgds-col">
                                         <img src="/assets/img/ansible-tower.png" alt="">
                                     </div>
-                                    <div class="col is-8">
+                                    <div class="sgds-col is-8">
                                         <span class="sgds-tag is-info is-rounded">
                                         intranet
                                         </span><br>
                                         https://sso.apex.dev:443/openam
                                     </div>
-                                    <div class="col">
+                                    <div class="sgds-col">
                                         <div class="sgds-button is-outlined is-danger is-rounded">Down</div>
                                     </div>
                                 </div>
@@ -122,8 +122,8 @@ layout: admin-template/layouts-single-side-nav
             </div>
         </div>
     </div>
-    <div class="row" id="tab2">
-        <div class="col">
+    <div class="sgds-row" id="tab2">
+        <div class="sgds-col">
             <div class="sgds-card">
                 <div class="sgds-card-header">
                     <p class="sgds-card-header-title is-block">
@@ -162,8 +162,8 @@ layout: admin-template/layouts-single-side-nav
             </div>
         </div>
     </div>
-    <div class="row" id="tab3">
-        <div class="col">
+    <div class="sgds-row" id="tab3">
+        <div class="sgds-col">
             <div class="sgds-card">
                 <div class="sgds-card-header">
                     <p class="sgds-card-header-title is-block">
@@ -185,8 +185,8 @@ layout: admin-template/layouts-single-side-nav
             </div>
         </div>
     </div>
-    <div class="row" id="tab4">
-        <div class="col">
+    <div class="sgds-row" id="tab4">
+        <div class="sgds-col">
             <div class="sgds-card">
                 <div class="sgds-card-header">
                     <p class="sgds-card-header-title is-block">
