--- a/contents/templates/admin-template/orders.html
+++ b/contents/templates/admin-template/orders.html
@@ -5,8 +5,8 @@ layout: admin-template/layouts-single-side-nav
 ---
 {% include admin-template/base.html %}
     <div class="sgds-container is-fluid">
-        <div class="row">
-            <div class="col">
+        <div class="sgds-row">
+            <div class="sgds-col">
                 <div class="sgds-notification is-warning">
                     <div class="sgds-notification-detail">
                         <span class="sgds-icon sgds-icon-callout is-size-4"></span>
@@ -20,8 +20,8 @@ layout: admin-template/layouts-single-side-nav
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col">
+        <div class="sgds-row">
+            <div class="sgds-col">
                 <div class="sgds-card">
                     <div class="sgds-card-header">
                         <p class="sgds-card-header-title">
@@ -29,8 +29,8 @@ layout: admin-template/layouts-single-side-nav
                         </p>
                     </div>
                     <div class="sgds-card-content">
-                        <div class="row">
-                            <div class="col">
+                        <div class="sgds-row">
+                            <div class="sgds-col">
                                 <div class="sgds-dropdown is-hoverable">
                                     <div class="sgds-dropdown-trigger">
                                         <button class="sgds-button" aria-haspopup="true" aria-controls="sgds-dropdown-menu">
@@ -66,12 +66,12 @@ layout: admin-template/layouts-single-side-nav
                                     </div>
                                 </div>
                             </div>
-                            <div class="col has-text-right">
-                                <div class="field has-addons has-addons-right">
-                                    <div class="control">
-                                        <input class="input" type="text" placeholder="Search Order">
+                            <div class="sgds-col has-text-right">
+                                <div class="sgds-field has-addons has-addons-right">
+                                    <div class="sgds-control">
+                                        <input class="sgds-input" type="text" placeholder="Search Order">
                                     </div>
-                                    <div class="control">
+                                    <div class="sgds-control">
                                         <a class="sgds-button is-primary">
                                             Search
                                         </a>
@@ -79,7 +79,7 @@ layout: admin-template/layouts-single-side-nav
                                 </div>
                             </div>
                         </div>
-                        <table class="table is-fullwidth is-striped is-hoverable is-fullwidth is-bordered is-narrow">
+                        <table class="sgds-table is-fullwidth is-striped is-hoverable is-fullwidth is-bordered is-narrow">
                             <thead class="has-text-weight-bold">
                                 <tr>
                                     <td>Order No.</td>
