--- a/contents/templates/admin-template/product-edit.html
+++ b/contents/templates/admin-template/product-edit.html
@@ -6,59 +6,59 @@ layout: admin-template/layouts-single-side-nav
 ---
 
 <div class="sgds-container is-fluid">
-    <div class="row">
-        <div class="col is-7">
+    <div class="sgds-row">
+        <div class="sgds-col is-7">
             <div class="sgds-card">
                 <div class="sgds-card-header">
                     <p class="sgds-card-header-title">Product Info</p>
                 </div>
                 <div class="sgds-card-content">
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label">ID</label>
+                    <div class="sgds-field is-horizontal">
+                        <div class="sgds-field-label is-normal">
+                            <label class="sgds-label">ID</label>
                         </div>
-                        <div class="field-body">
-                            <div class="field">
-                                <p class="control is-expanded">
-                                    <input class="input" type="text" placeholder="Name" value="1234">
+                        <div class="sgds-field-body">
+                            <div class="sgds-field">
+                                <p class="sgds-control is-expanded">
+                                    <input class="sgds-input" type="text" placeholder="Name" value="1234">
 
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label">Product Name</label>
+                    <div class="sgds-field is-horizontal">
+                        <div class="sgds-field-label is-normal">
+                            <label class="sgds-label">Product Name</label>
                         </div>
-                        <div class="field-body">
-                            <div class="field">
-                                <p class="control is-expanded">
-                                    <input class="input" type="text" placeholder="Name" value="lorem ipsum">
+                        <div class="sgds-field-body">
+                            <div class="sgds-field">
+                                <p class="sgds-control is-expanded">
+                                    <input class="sgds-input" type="text" placeholder="Name" value="lorem ipsum">
 
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label">Description</label>
+                    <div class="sgds-field is-horizontal">
+                        <div class="sgds-field-label is-normal">
+                            <label class="sgds-label">Description</label>
                         </div>
-                        <div class="field-body">
-                            <div class="field">
-                                <p class="control is-expanded">
-                                    <textarea class="textarea" placeholder="your product description here"></textarea>
+                        <div class="sgds-field-body">
+                            <div class="sgds-field">
+                                <p class="sgds-control is-expanded">
+                                    <textarea class="sgds-textarea" placeholder="your product description here"></textarea>
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label">Catergory</label>
+                    <div class="sgds-field is-horizontal">
+                        <div class="sgds-field-label is-normal">
+                            <label class="sgds-label">Catergory</label>
                         </div>
-                        <div class="field-body">
-                            <div class="field is-narrow">
-                                <div class="control">
-                                    <div class="select is-fullwidth">
+                        <div class="sgds-field-body">
+                            <div class="sgds-field is-narrow">
+                                <div class="sgds-control">
+                                    <div class="sgds-select is-fullwidth">
                                         <select>
                                             <option>Tablet</option>
                                             <option>Laptop</option>
@@ -70,14 +70,14 @@ layout: admin-template/layouts-single-side-nav
                             </div>
                         </div>
                     </div>
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label">Price</label>
+                    <div class="sgds-field is-horizontal">
+                        <div class="sgds-field-label is-normal">
+                            <label class="sgds-label">Price</label>
                         </div>
-                        <div class="field-body">
-                            <div class="field has-addons">
-                                <p class="control">
-                                    <span class="select">
+                        <div class="sgds-field-body">
+                            <div class="sgds-field has-addons">
+                                <p class="sgds-control">
+                                    <span class="sgds-select">
                                       <select>
                                         <option>$</option>
                                         <option>£</option>
@@ -85,25 +85,25 @@ layout: admin-template/layouts-single-side-nav
                                       </select>
                                     </span>
                                 </p>
-                                <p class="control">
-                                    <input class="input" type="text" placeholder="" value="65.00">
+                                <p class="sgds-control">
+                                    <input class="sgds-input" type="text" placeholder="" value="65.00">
                                 </p>
 
                             </div>
                         </div>
                     </div>
-                    <div class="field is-horizontal">
-                        <div class="field-label">
-                            <label class="label">Condition</label>
+                    <div class="sgds-field is-horizontal">
+                        <div class="sgds-field-label">
+                            <label class="sgds-label">Condition</label>
                         </div>
-                        <div class="field-body">
-                            <div class="field is-narrow">
-                                <div class="control">
-                                    <label class="radio">
+                        <div class="sgds-field-body">
+                            <div class="sgds-field is-narrow">
+                                <div class="sgds-control">
+                                    <label class="sgds-radio">
                                         <input type="radio" name="member" checked>
                                         New
                                     </label>
-                                    <label class="radio">
+                                    <label class="sgds-radio">
                                         <input type="radio" name="member">
                                         Used
                                     </label>
@@ -112,15 +112,15 @@ layout: admin-template/layouts-single-side-nav
                         </div>
                     </div>
 
-                    <div class="field is-horizontal margin--top--lg">
-                        <div class="field-label">
-                            <label class="label"></label>
+                    <div class="sgds-field is-horizontal margin--top--lg">
+                        <div class="sgds-field-label">
+                            <label class="sgds-label"></label>
                         </div>
-                        <div class="field-body">
-                        <div class="control">
+                        <div class="sgds-field-body">
+                        <div class="sgds-control">
                             <button class="button is-success">Save</button>
                         </div>
-                        <div class="control">
+                        <div class="sgds-control">
                             <button class="button is-text">Cancel</button>
                         </div>
                         </div>
@@ -129,20 +129,20 @@ layout: admin-template/layouts-single-side-nav
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="sgds-col">
             <div class="sgds-card">
                 <div class="sgds-card-header">
                     <p class="sgds-card-header-title">Product Image</p>
                 </div>
                 <div class="sgds-card-content">
-                    <div class="file is-boxed">
-                        <label class="file-label">
-                            <input class="file-input" type="file" name="resume">
-                            <span class="file-cta">
-                              <span class="file-icon">
+                    <div class="sgds-file is-boxed">
+                        <label class="sgds-file-label">
+                            <input class="sgds-file-input" type="file" name="resume">
+                            <span class="sgds-file-cta">
+                              <span class="sgds-file-icon">
                                 <i class="sgds-icon sgds-icon-upload"></i>
                               </span>
-                              <span class="file-label">
+                              <span class="sgds-file-label">
                                 Choose a file…
                               </span>
                             </span>
@@ -150,12 +150,12 @@ layout: admin-template/layouts-single-side-nav
                     </div>
                 </div>
                 <div class="sgds-card-content">
-                    <table class="table is-fullwidth is-striped is-hoverable is-fullwidth is-bordered is-narrow">
+                    <table class="sgds-table is-fullwidth is-striped is-hoverable is-fullwidth is-bordered is-narrow">
                         <tbody>
                         <tr>
                             <td class="is-vcentered" style="width:30%"><img src="https://c.stocksy.com/a/Ins800/z9/2117256.jpg" alt=""></td>
                             <td class="is-vcentered">
-                                <div class="field">
+                                <div class="sgds-field">
                                     <input id="switchExample" type="checkbox" name="switchExample" class="switch is-rounded" checked="checked">
                                     <label for="switchExample">Cover</label>
                                 </div>
@@ -168,7 +168,7 @@ layout: admin-template/layouts-single-side-nav
                         <tr>
                             <td class="is-vcentered" style="width:30%"><img src="https://c.stocksy.com/a/bbG900/z9/2208787.jpg" alt=""></td>
                             <td class="is-vcentered">
-                                <div class="field">
+                                <div class="sgds-field">
                                     <input id="switchExample1" type="checkbox" name="switchExample" class="switch is-rounded" checked="checked">
                                     <label for="switchExample1">Cover</label>
                                 </div>
@@ -180,7 +180,7 @@ layout: admin-template/layouts-single-side-nav
                         <tr>
                             <td class="is-vcentered" style="width:30%"><img src="https://c.stocksy.com/a/yBR200/z9/581186.jpg" alt=""></td>
                             <td class="is-vcentered">
-                                <div class="field">
+                                <div class="sgds-field">
                                     <input id="switchExample2" type="checkbox" name="switchExample" class="switch is-rounded" checked="checked">
                                      <label for="switchExample2">Cover</label>
                                 </div>
