--- a/contents/templates/admin-template/products.html
+++ b/contents/templates/admin-template/products.html
@@ -7,8 +7,8 @@ breadcrump: products
 
 {% include admin-template/base.html %}
 <div class="sgds-container is-fluid">
-    <div class="row">
-        <div class="col is-3">
+    <div class="sgds-row">
+        <div class="sgds-col is-3">
             <div class="sgds-card">
                 <div class="sgds-card-header has-background-warning">
                     <p class="sgds-card-header-title  has-text-white">
@@ -20,7 +20,7 @@ breadcrump: products
                 </div>
             </div>
         </div>
-        <div class="col is-3">
+        <div class="sgds-col is-3">
             <div class="sgds-card">
                 <div class="sgds-card-header has-background-danger">
                     <p class="sgds-card-header-title  has-text-white">
@@ -33,7 +33,7 @@ breadcrump: products
             </div>
         </div>
 
-        <div class="col is-3">
+        <div class="sgds-col is-3">
             <div class="sgds-card">
                 <div class="sgds-card-header has-background-success">
                     <p class="sgds-card-header-title  has-text-white">
@@ -51,8 +51,8 @@ breadcrump: products
 </div>
 
 <div class="sgds-container is-fluid">
-    <div class="row">
-        <div class="col">
+    <div class="sgds-row">
+        <div class="sgds-col">
             <div class="sgds-card">
                 <div class="sgds-card-header">
                     <p class="sgds-card-header-title">
@@ -60,7 +60,7 @@ breadcrump: products
                     </p>
                 </div>
                 <div class="sgds-card-content">
-                    <table class="table is-fullwidth is-striped is-hoverable is-fullwidth is-bordered">
+                    <table class="sgds-table is-fullwidth is-striped is-hoverable is-fullwidth is-bordered">
                         <thead class="has-text-weight-bold">
                             <tr>
                                 <td>Product ID</td>
