--- a/contents/templates/admin-template/profile.html
+++ b/contents/templates/admin-template/profile.html
@@ -5,80 +5,80 @@ layout: admin-template/layouts-single-side-nav
 ---
 
 <div class="sgds-container is-fluid">
-    <div class="row">
-        <div class="col is-6">
+    <div class="sgds-row">
+        <div class="sgds-col is-6">
             <div class="sgds-box">
-                <div class="field">
-                    <label class="label">Username</label>
-                    <div class="control">
-                        <input class="input is-danger" type="text" placeholder="ApexAdmin" disabled>
+                <div class="sgds-field">
+                    <label class="sgds-label">Username</label>
+                    <div class="sgds-control">
+                        <input class="sgds-input is-danger" type="text" placeholder="ApexAdmin" disabled>
                     </div>
-                    <p class="help is-danger">Username cannot be change</p>
+                    <p class="sgds-help is-danger">Username cannot be change</p>
                 </div>
 
-                <div class="field">
-                    <label class="label">Password</label>
-                    <div class="control">
-                        <input class="input" type="password" placeholder="John" value="1234567890">
+                <div class="sgds-field">
+                    <label class="sgds-label">Password</label>
+                    <div class="sgds-control">
+                        <input class="sgds-input" type="password" placeholder="John" value="1234567890">
                     </div>
-                    <p class="help is-danger">Password must be blah blah blah...</p>
+                    <p class="sgds-help is-danger">Password must be blah blah blah...</p>
                 </div>
 
-                <div class="field">
-                    <label class="label">Confirm Password</label>
-                    <div class="control">
-                        <input class="input" type="password" placeholder="John" value="1234567890">
-                    </div>
-                </div>
-
-                <div class="field">
-                    <label class="label">First Name</label>
-                    <div class="control">
-                        <input class="input" type="text" placeholder="John">
+                <div class="sgds-field">
+                    <label class="sgds-label">Confirm Password</label>
+                    <div class="sgds-control">
+                        <input class="sgds-input" type="password" placeholder="John" value="1234567890">
                     </div>
                 </div>
 
-                <div class="field">
-                    <label class="label">Last Name</label>
-                    <div class="control">
-                        <input class="input" type="text" placeholder="Doe">
+                <div class="sgds-field">
+                    <label class="sgds-label">First Name</label>
+                    <div class="sgds-control">
+                        <input class="sgds-input" type="text" placeholder="John">
                     </div>
                 </div>
 
-                <div class="field">
-                    <label class="label">Email</label>
-                    <div class="control">
-                        <input class="input" type="email" placeholder="johndoe@agency.gov.sg">
+                <div class="sgds-field">
+                    <label class="sgds-label">Last Name</label>
+                    <div class="sgds-control">
+                        <input class="sgds-input" type="text" placeholder="Doe">
                     </div>
                 </div>
 
-                <div class="field">
-                    <label class="label">Company</label>
-                    <div class="control">
-                        <input class="input" type="email" placeholder="johndoe@agency.gov.sg">
+                <div class="sgds-field">
+                    <label class="sgds-label">Email</label>
+                    <div class="sgds-control">
+                        <input class="sgds-input" type="email" placeholder="johndoe@agency.gov.sg">
                     </div>
                 </div>
 
-                <div class="field">
-                    <div class="control">
-                        <label class="checkbox">
+                <div class="sgds-field">
+                    <label class="sgds-label">Company</label>
+                    <div class="sgds-control">
+                        <input class="sgds-input" type="email" placeholder="johndoe@agency.gov.sg">
+                    </div>
+                </div>
+
+                <div class="sgds-field">
+                    <div class="sgds-control">
+                        <label class="sgds-checkbox">
                             <input type="checkbox">
                             I agree to the <a href="#">terms and conditions</a>
                         </label>
                     </div>
                 </div>
 
-                <div class="field is-grouped">
-                    <div class="control">
+                <div class="sgds-field is-grouped">
+                    <div class="sgds-control">
                         <button class="sgds-button is-success">Save</button>
                     </div>
-                    <div class="control">
+                    <div class="sgds-control">
                         <button class="sgds-button is-text">Cancel</button>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col is-6">
+        <div class="sgds-col is-6">
 
             <div class="content">
                 <h5 class="has-text-weight-bold">Questions?</h5>
