--- a/contents/templates/quickStart/index.html
+++ b/contents/templates/quickStart/index.html
@@ -4,8 +4,8 @@ permalink: /templates/quickstart/
 ---
 <section class="sgds-hero has-background-primary">
     <div class="sgds-hero-body sgds-container is-fluid">
-        <div class="row is-vcentered">
-            <div class="col is-8 is-offset-2 has-text-white has-text-centered">
+        <div class="sgds-row is-vcentered">
+            <div class="sgds-col is-8 is-offset-2 has-text-white has-text-centered">
                 <h1 class="display"><b>title</b></h1>
                 <h5 class="is-hidden-mobile margin--bottom--lg">subtitle</h5>
                 <div class="sgds-dropdown is-fullwidth is-menu-centered">
@@ -33,17 +33,17 @@ permalink: /templates/quickstart/
 </section>
 <section class="sgds-section">
     <div class="sgds-container">
-        <div class="row">
-            <div class="col">
+        <div class="sgds-row">
+            <div class="sgds-col">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, quisquam.
             </div>
-            <div class="col">
+            <div class="sgds-col">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis, reprehenderit!
             </div>
-            <div class="col">
+            <div class="sgds-col">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, modi?
             </div>
-            <div class="col">
+            <div class="sgds-col">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, tempora!
             </div>
         </div>
