--- a/_includes/sgds-masthead.html
+++ b/_includes/sgds-masthead.html
@@ -1,7 +1,7 @@
 <div class="sgds-masthead" aria-label="Official SG Government Agency Website">
     <div class="sgds-container ">
-        <div class="row is-mobile">
-            <div class="col">
+        <div class="sgds-row is-mobile">
+            <div class="sgds-col">
                 <a href="https://www.gov.sg" target="_blank">
                     <span class="sgds-icon sgds-icon-sg-crest"></span>
                     <span class="is-text">A Singapore Government Agency Website</span>
