--- a/_includes/sgds-search-box.html
+++ b/_includes/sgds-search-box.html
@@ -1,7 +1,7 @@
-<div class="field has-addons padding--sm">
-    <div class="control has-icons-left is-expanded padding--bottom--sm">
+<div class="sgds-field has-addons padding--sm">
+    <div class="sgds-control has-icons-left is-expanded padding--bottom--sm">
         <input
-            class="input is-fullwidth is-borderless is-shadowless"
+            class="sgds-input is-fullwidth is-borderless is-shadowless"
             id="search"
             type="text"
             placeholder="{{ site.search_placeholder }}"
@@ -13,7 +13,7 @@
             <i class="search-bar-icon sgds-icon sgds-icon-search is-size-7"></i>
         </span>
     </div>
-    <div class="control">
+    <div class="sgds-control">
         <button
             type="submit"
             class="sgds-button is-primary has-text-white padding--left padding--right is-hidden-touch"
