--- a/_includes/visit-docs-section.html
+++ b/_includes/visit-docs-section.html
@@ -3,8 +3,8 @@
   style="background: url('/assets/img/bg_splash.png') center center; background-size:cover;"
 >
   <div class="sgds-container ">
-    <div class="row has-text-centered">
-      <div class="col">
+    <div class="sgds-row has-text-centered">
+      <div class="sgds-col">
         <p class="has-text-white is-size-4 has-text-weight-bold margin--bottom--lg">
           Looking for components documentation?
         </p>
