--- a/_layouts/admin-template/layouts-single-side-nav.html
+++ b/_layouts/admin-template/layouts-single-side-nav.html
@@ -9,14 +9,14 @@
         <div class="rightpanel">
             <section class="sgds-section is-xsmall has-background-black">
                 <div class="sgds-container is-fluid">
-                    <div class="row">
-                        <div class="col">
-                            <div class="field has-addons has-addons-centered">
-                                <p class="control is-expanded">
-                                    <input class="input" type="text" placeholder="Quick Search">
+                    <div class="sgds-row">
+                        <div class="sgds-col">
+                            <div class="sgds-field has-addons has-addons-centered">
+                                <p class="sgds-control is-expanded">
+                                    <input class="sgds-input" type="text" placeholder="Quick Search">
                                 </p>
-                                <p class="control">
-                                    <span class="select">
+                                <p class="sgds-control">
+                                    <span class="sgds-select">
                                         <select>
                                             <option>Projects</option>
                                             <option>Agencies</option>
@@ -25,7 +25,7 @@
                                         </select>
                                     </span>
                                 </p>
-                                <p class="control">
+                                <p class="sgds-control">
                                     <a class="sgds-button">
                                         Search
                                     </a>
@@ -37,8 +37,8 @@
             </section>
             <section class="sgds-section is-xsmall">
                 <div class="sgds-container is-fluid">
-                    <div class="row">
-                        <div class="col">
+                    <div class="sgds-row">
+                        <div class="sgds-col">
                             {% include sgds-breadcrumb.html %}
                         </div>
                     </div>
@@ -47,8 +47,8 @@
 
             <section class="sgds-section is-xsmall">
                 <div class="sgds-container is-fluid">
-                    <div class="row">
-                        <div class="col has-text-white">
+                    <div class="sgds-row">
+                        <div class="sgds-col has-text-white">
                             <h3 class="has-text-weight-bold">{{page.title}}</h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, omnis.
