--- a/_layouts/layout-sidenav.html
+++ b/_layouts/layout-sidenav.html
@@ -3,8 +3,8 @@ layout: layout-default
 ---
 <section class="sgds-section is-small">
     <div class="sgds-container">
-        <div class="row sidenav-container">
-            <div class="col is-2 is-hidden-touch">
+        <div class="sgds-row sidenav-container">
+            <div class="sgds-col is-2 is-hidden-touch">
                 <div class="sidenav" data-topspacing="140" data-bottomspacing="40">
                     <div class="sidebar__inner sgds-menu">
                         {% if page.url contains '/docs/' %}
@@ -17,7 +17,7 @@ layout: layout-default
                     </div>
                 </div>
             </div>
-            <div class="col is-8 is-12-touch is-offset-1-desktop">
+            <div class="sgds-col is-8 is-12-touch is-offset-1-desktop">
                 <div class="content custom-content">
                     {{ content }}          
                 </div>
