--- a/assets/custom-css/_sgds-example.scss
+++ b/assets/custom-css/_sgds-example.scss
@@ -64,7 +64,7 @@
       }
     }
   }
-  .row {
+  .sgds-row {
     @include example-control(1.5rem, center);
     &:before {
       @include example-tag(".row");
@@ -86,7 +86,7 @@
       }
     }
   }
-  .col {
+  .sgds-col {
     @include example-control(0rem, left);
     //background-color: rgba(white,0.8);
     color: black;
