--- a/contents/templates/admin-template/register.html
+++ b/contents/templates/admin-template/register.html
@@ -4,18 +4,18 @@ permalink: /admin-template/register/
 layout: admin-template/layouts-single-side-nav
 ---
 <div class="sgds-container">
-    <div class="row is-multiline">
-        <div class="col is-4 is-offset-4">
+    <div class="sgds-row is-multiline">
+        <div class="sgds-col is-4 is-offset-4">
             <form id="demo-form" class="sgds-box padding--lg has-background-white">
-                <div class="field has-text-centered">
+                <div class="sgds-field has-text-centered">
 
                     <h1 class="has-text-weight-bold">Logo</h1>
 
                 </div>
-                <div class="field">
-                    <label class="label">Email</label>
-                    <p class="control has-icons-left has-icons-right">
-                        <input class="input" type="email" placeholder="Email">
+                <div class="sgds-field">
+                    <label class="sgds-label">Email</label>
+                    <p class="sgds-control has-icons-left has-icons-right">
+                        <input class="sgds-input" type="email" placeholder="Email">
                         <span class="icon is-small is-left">
                               <i class="sgds-icon sgds-icon-person"></i>
                             </span>
@@ -24,34 +24,34 @@ layout: admin-template/layouts-single-side-nav
                             </span>
                     </p>
                 </div>
-                <div class="field">
-                    <label class="label">Password</label>
-                    <p class="control has-icons-left">
-                        <input class="input" type="password" placeholder="Password">
+                <div class="sgds-field">
+                    <label class="sgds-label">Password</label>
+                    <p class="sgds-control has-icons-left">
+                        <input class="sgds-input" type="password" placeholder="Password">
                         <span class="icon is-small is-left">
                               <i class="sgds-icon sgds-icon-lock"></i>
                             </span>
                     </p>
                 </div>
-                <div class="field">
-                    <div class="control">
-                        <label class="checkbox">
+                <div class="sgds-field">
+                    <div class="sgds-control">
+                        <label class="sgds-checkbox">
                             <input type="checkbox">
                             Keep me logged in
                         </label>
                     </div>
                 </div>
-                <div class="field">
-                    <p class="control">
+                <div class="sgds-field">
+                    <p class="sgds-control">
                         <a href="/admin-template/overview/" class="sgds-button is-success is-fullwidth is-medium" >Login</a>
                     </p>
                 </div>
             </form>
         </div>
-        <div class="col is-4 is-offset-4">
+        <div class="sgds-col is-4 is-offset-4">
             <div class="sgds-box padding--lg margin--top--sm has-background-white">
-                <div class="field">
-                    <p class="control has-text-centered">
+                <div class="sgds-field">
+                    <p class="sgds-control has-text-centered">
                         Don't have an account?
                         <a href="/admin-template/register/" class="has-text-link">
                             Sign up here
@@ -65,74 +65,74 @@ layout: admin-template/layouts-single-side-nav
 <!--<section class="sgds-hero is-fullheight has-background-primary">-->
     <!--<div class="sgds-hero-body">-->
         <!--<div class="sgds-container">-->
-            <!--<div class="row">-->
-                <!--<div class="col is-6 is-offset-3">-->
+            <!--<div class="sgds-row">-->
+                <!--<div class="sgds-col is-6 is-offset-3">-->
                     <!--<div class="sgds-box">-->
-                        <!--<div class="field">-->
-                            <!--<label class="label">Username</label>-->
-                            <!--<div class="control">-->
-                                <!--<input class="input is-danger" type="text" placeholder="ApexAdmin" disabled>-->
+                        <!--<div class="sgds-field">-->
+                            <!--<label class="sgds-label">Username</label>-->
+                            <!--<div class="sgds-control">-->
+                                <!--<input class="sgds-input is-danger" type="text" placeholder="ApexAdmin" disabled>-->
                             <!--</div>-->
-                            <!--<p class="help is-danger">Username cannot be change</p>-->
+                            <!--<p class="sgds-help is-danger">Username cannot be change</p>-->
                         <!--</div>-->
 
-                        <!--<div class="field">-->
-                            <!--<label class="label">Password</label>`-->
-                            <!--<div class="control">-->
-                                <!--<input class="input" type="password" placeholder="John" value="1234567890">-->
+                        <!--<div class="sgds-field">-->
+                            <!--<label class="sgds-label">Password</label>`-->
+                            <!--<div class="sgds-control">-->
+                                <!--<input class="sgds-input" type="password" placeholder="John" value="1234567890">-->
                             <!--</div>-->
-                            <!--<p class="help is-danger">Password must be blah blah blah...</p>-->
+                            <!--<p class="sgds-help is-danger">Password must be blah blah blah...</p>-->
                         <!--</div>-->
 
-                        <!--<div class="field">-->
-                            <!--<label class="label">Confirm Password</label>-->
-                            <!--<div class="control">-->
-                                <!--<input class="input" type="password" placeholder="John" value="1234567890">-->
-                            <!--</div>-->
-                        <!--</div>-->
-
-                        <!--<div class="field">-->
-                            <!--<label class="label">First Name</label>-->
-                            <!--<div class="control">-->
-                                <!--<input class="input" type="text" placeholder="John">-->
+                        <!--<div class="sgds-field">-->
+                            <!--<label class="sgds-label">Confirm Password</label>-->
+                            <!--<div class="sgds-control">-->
+                                <!--<input class="sgds-input" type="password" placeholder="John" value="1234567890">-->
                             <!--</div>-->
                         <!--</div>-->
 
-                        <!--<div class="field">-->
-                            <!--<label class="label">Last Name</label>-->
-                            <!--<div class="control">-->
-                                <!--<input class="input" type="text" placeholder="Doe">-->
+                        <!--<div class="sgds-field">-->
+                            <!--<label class="sgds-label">First Name</label>-->
+                            <!--<div class="sgds-control">-->
+                                <!--<input class="sgds-input" type="text" placeholder="John">-->
                             <!--</div>-->
                         <!--</div>-->
 
-                        <!--<div class="field">-->
-                            <!--<label class="label">Email</label>-->
-                            <!--<div class="control">-->
-                                <!--<input class="input" type="email" placeholder="johndoe@agency.gov.sg">-->
+                        <!--<div class="sgds-field">-->
+                            <!--<label class="sgds-label">Last Name</label>-->
+                            <!--<div class="sgds-control">-->
+                                <!--<input class="sgds-input" type="text" placeholder="Doe">-->
                             <!--</div>-->
                         <!--</div>-->
 
-                        <!--<div class="field">-->
-                            <!--<label class="label">Company</label>-->
-                            <!--<div class="control">-->
-                                <!--<input class="input" type="email" placeholder="johndoe@agency.gov.sg">-->
+                        <!--<div class="sgds-field">-->
+                            <!--<label class="sgds-label">Email</label>-->
+                            <!--<div class="sgds-control">-->
+                                <!--<input class="sgds-input" type="email" placeholder="johndoe@agency.gov.sg">-->
                             <!--</div>-->
                         <!--</div>-->
 
-                        <!--<div class="field">-->
-                            <!--<div class="control">-->
-                                <!--<label class="checkbox">-->
+                        <!--<div class="sgds-field">-->
+                            <!--<label class="sgds-label">Company</label>-->
+                            <!--<div class="sgds-control">-->
+                                <!--<input class="sgds-input" type="email" placeholder="johndoe@agency.gov.sg">-->
+                            <!--</div>-->
+                        <!--</div>-->
+
+                        <!--<div class="sgds-field">-->
+                            <!--<div class="sgds-control">-->
+                                <!--<label class="sgds-checkbox">-->
                                     <!--<input type="checkbox">-->
                                     <!--I agree to the <a href="#">terms and conditions</a>-->
                                 <!--</label>-->
                             <!--</div>-->
                         <!--</div>-->
 
-                        <!--<div class="field is-grouped">-->
-                            <!--<div class="control">-->
+                        <!--<div class="sgds-field is-grouped">-->
+                            <!--<div class="sgds-control">-->
                                 <!--<button class="sgds-button is-success">Save</button>-->
                             <!--</div>-->
-                            <!--<div class="control">-->
+                            <!--<div class="sgds-control">-->
                                 <!--<button class="sgds-button is-text">Cancel</button>-->
                             <!--</div>-->
                         <!--</div>-->
